# COMP2521-Data-Structures-and-Algorithms

./: BST.c  BST.h  README.md  graph.c  helper.c  helper.h  inverted.c  pagerank.c  queue.c  queue.h  scaledFootrule.c  searchPagerank.c  searchTfIdf.c  set.c  set.h  sort.c
BSTLab/: Results.txt  Tree.c  output8  runtests  tlab
BSTLab/giventests/: outputP  outputR
Lab1/: DLList.c  DLList.h  testList.c
assignment1/: Readme.md  listIteratorG.c  testListIteratorG.c
assignment2/: BST.c  BST.h  Readme.md  graph.c  graph.h  helper.c  helper.h  inverted.c  pagerank.c  queue.c  queue.h  scaledFootrule.c  searchPagerank.c  searchTfIdf.c  set.c  sort.c  sort.h
crawLab/: crawl  crawl.c
graphLab/: CMakeLists.txt  Map.c
graphLab2/: CMakeLists.txt  Graph.c  travel.c
hashLab/: Answers.txt  HashTable.c  gmon.out  words
